fix z-index issue with hamburger menu

--- a/css/layout/chatbot-page/_header-chat.scss
+++ b/css/layout/chatbot-page/_header-chat.scss
@@ -116,7 +116,7 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 1;
+    z-index: 2;
 
     .close-btn {
         width: 20px;
