--- a/css/styles.css
+++ b/css/styles.css
@@ -1233,7 +1233,7 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 2;
 }
 nav .close-btn {
   width: 20px;
